Make service add method return Object instead of void. Fix document Service download, upload and add functions.